--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "next start",
     "db:setup": "npx tsx lib/db/setup.ts",
     "db:seed": "npx tsx lib/db/seed.ts",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
@@ -29,8 +28,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.4",
-    "drizzle-orm": "^0.39.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
     "next": "15.2.0-canary.33",
@@ -45,6 +42,10 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.2.0",
     "typescript": "^5.7.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@prisma/client": "^5.10.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.10.2"
   }
 }
