--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "tailwindcss-react-aria-components": "1.2.0",
     "typescript": "^5.7.3",
     "zod": "^3.24.1",
-    "@prisma/client": "^5.10.2"
+    "@prisma/client": "^5.10.2",
+    "@prisma/extension-accelerate": "1.2.2"
   },
   "devDependencies": {
     "prisma": "^5.10.2"
